<resources>
    <string name="app_name">SchulProjekt</string>
    <string name="textUserName">Username</string>
    <string name="textPassword">Password</string>
    <string name="textLogin">Login</string>
    <string name="textSingleplayer">Single player</string>
    <string name="textMultiplayer">Multiplayer</string>
    <string name="textOptions">Options</string>
    <string name="textBack">Back</string>
    <string name="textEquipment">Equipment</string>
    <string name="logOutButtonText">Logout</string>
    <string name="textPasswordCheck">Repeat password</string>
    <string name="textRegister">Register</string>
    <string name="textSearching">Searching game for %1$d s</string>
    <string name="textCancel">Cancel</string>
    <string name="textSelect">Select</string>
    <string name="textSaved">Saved</string>
    <string name="textWins">Wins: %1$d</string>
</resources>
