<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/buttonSingleplayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textSingleplayer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintVertical_bias="0.3"
        android:onClick="startSingleplayer"/>

    <Button
        android:id="@+id/buttonMultiplayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textMultiplayer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintVertical_bias="0.5"
        android:onClick="startMultiplayer"/>


    <Button
        android:id="@+id/buttonEquipment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textEquipment"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintVertical_bias="0.7"
        android:onClick="showEquipment"
         />

    <Button
        android:id="@+id/buttonOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textOptions"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintVertical_bias="0.9"
        android:onClick="showOptions"/>



</android.support.constraint.ConstraintLayout>